--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@
                 </div>
                 <div class="tw-flex-shrink-0 tw-mx-4">
                   <div class="tw-bg-white tw-rounded-xl tw-overflow-hidden tw-shadow-lg tw-w-[300px]">
-                    <img src="assets/thumbnails/scary.png" alt="Ocean" class="tw-w-full tw-h-[180px] tw-object-cover">
+                    <img src="assets/thumbnails/surprise.jpg" alt="Ocean" class="tw-w-full tw-h-[180px] tw-object-cover">
                   </div>
                 </div>
                 <div class="tw-flex-shrink-0 tw-mx-4">
                   <div class="tw-bg-white tw-rounded-xl tw-overflow-hidden tw-shadow-lg tw-w-[300px]">
-                    <img src="assets/thumbnails/pinochio.png" alt="Pinocchio" class="tw-w-full tw-h-[180px] tw-object-cover">
+                    <img src="assets/thumbnails/WW1.png" alt="Pinocchio" class="tw-w-full tw-h-[180px] tw-object-cover">
                   </div>
                 </div>
                 <div class="tw-flex-shrink-0 tw-mx-4">
@@ -188,7 +188,7 @@
                 </div>
                 <div class="tw-flex-shrink-0 tw-mx-4">
                     <div class="tw-bg-white tw-rounded-xl tw-overflow-hidden tw-shadow-lg tw-w-[300px]">
-                      <img src="assets/thumbnails/scary_looking_island.png" alt="Scary Looking Island" class="tw-w-full tw-h-[180px] tw-object-cover">
+                      <img src="assets/thumbnails/reddot.png" alt="Scary Looking Island" class="tw-w-full tw-h-[180px] tw-object-cover">
                     </div>
                 </div>
                 <div class="tw-flex-shrink-0 tw-mx-4"></div>
@@ -210,17 +210,17 @@
                 </div>
                 <div class="tw-flex-shrink-0 tw-mx-4">
                   <div class="tw-bg-white tw-rounded-xl tw-overflow-hidden tw-shadow-lg tw-w-[300px]">
-                    <img src="assets/thumbnails/serious.png" alt="Serious face" class="tw-w-full tw-h-[180px] tw-object-cover">
+                    <img src="assets/thumbnails/QUIZ.png" alt="Serious face" class="tw-w-full tw-h-[180px] tw-object-cover">
                   </div>
                 </div>
                 <div class="tw-flex-shrink-0 tw-mx-4">
                   <div class="tw-bg-white tw-rounded-xl tw-overflow-hidden tw-shadow-lg tw-w-[300px]">
-                    <img src="assets/thumbnails/panama.png" alt="Panama" class="tw-w-full tw-h-[180px] tw-object-cover">
+                    <img src="assets/thumbnails/F1.png" alt="Panama" class="tw-w-full tw-h-[180px] tw-object-cover">
                   </div>
                 </div>
                 <div class="tw-flex-shrink-0 tw-mx-4">
                     <div class="tw-bg-white tw-rounded-xl tw-overflow-hidden tw-shadow-lg tw-w-[300px]">
-                      <img src="assets/thumbnails/plane.png" alt="Plane" class="tw-w-full tw-h-[180px] tw-object-cover">
+                      <img src="assets/thumbnails/PLAIN.png" alt="Plane" class="tw-w-full tw-h-[180px] tw-object-cover">
                     </div>
                 </div>
                 <div class="tw-flex-shrink-0 tw-mx-4">
