--- a/index.html
+++ b/index.html
@@ -332,16 +332,15 @@
                     </h4>
 
                     <h3 class="tw-text-4xl tw-font-medium max-md:tw-text-2xl">
-                         A/B Test Your Thumbnails & Titles Locally
+                        Generate High-CTR Titles Instantly
                     </h3>
 
                     <div class="tw-mt-4 tw-flex tw-flex-col tw-gap-3">
                         <span
                             class="tw-text-lg tw-text-gray-300 max-md:tw-text-base"
                         >
-                        Find what works best before you post.<br>
-                        Easily test thumbnails and titles using our smart AI. 
-                        Skip hours of trial and error after publishing—start with the winning option and get more views from day one.
+                        Get the best-performing title before you even post.<br>
+                        Our AI analyzes engagement trends to generate 5 optimized titles, maximizing your chances of higher CTR and views.
                     </span>
                     </div>
                 </div>
@@ -351,7 +350,7 @@
                         class="tw-max-h-[650px] tw-max-w-[850px] tw-overflow-hidden tw-rounded-lg tw-shadow-lg tw-shadow-[rgba(170,49,233,0.44021358543417366)]"
                     >
                         <img
-                            src="./assets\images\Workflow\a_b_testing.PNG"
+                            src="./assets\images\Workflow\titlege.PNG"
                             alt="coding"
                             class="tw-h-full tw-w-full tw-object-cover"
                         />
@@ -371,7 +370,7 @@
                         class="tw-max-h-[650px] tw-max-w-[850px] tw-overflow-hidden tw-rounded-lg tw-shadow-lg tw-shadow-[rgba(170,49,233,0.44021358543417366)]"
                     >
                         <img
-                            src="./assets\images\Workflow\ScheduleGood.png"
+                            src="./assets\images\Workflow\a_b_testing.png"
                             alt="coding"
                             class="tw-h-full tw-w-full tw-object-cover"
                         />
@@ -385,16 +384,16 @@
                     </h4>
 
                     <h3 class="tw-text-4xl tw-font-medium max-md:tw-text-2xl">
-                         Plan Your Video
+                        A/B Test Your Thumbnails & Titles Locally
                     </h3>
 
                     <div class="tw-mt-4 tw-flex tw-flex-col tw-gap-3">
                         <span
                             class="tw-text-lg tw-text-gray-300 max-md:tw-text-base"
                         >
-                        Turn ideas into action.<br>
-                        Stay organized and focused with simple tools to plan your videos. 
-                        Keep everything on track so you can create with confidence and stay ahead of your schedule.
+                        Find what works best before you post.<br>
+                        Easily test thumbnails and titles using our smart AI. 
+                        Skip hours of trial and error after publishing—start with the winning option and get more views from day one.
                         </span>
                     </div>
                 </div>
