--- a/thumbnails_generator.html
+++ b/thumbnails_generator.html
@@ -220,14 +220,24 @@
                     </div>
 
                     <div class="tw-flex tw-flex-col tw-gap-4 tw-justify-center tw-items-center">
-                        <!-- Section Prompt -->
+                        <!-- Section Prompt avec selecteur -->
                         <div class="tw-w-full tw-max-w-2xl">
                             <label class="tw-block tw-text-sm tw-font-medium tw-mb-2 text-center">Video Topic</label>
-                            <textarea
-                                id="video_topic"
-                                class="tw-w-full tw-h-[10px] tw-px-4 tw-py-3 tw-rounded-lg tw-bg-white dark:tw-bg-[#17181b] tw-border dark:tw-border-gray-800 focus:tw-border-[#6366f1] focus:tw-ring-1 focus:tw-ring-[#6366f1] tw-outline-none tw-transition-colors"
-                                placeholder="Describe the topic of the video..."
-                            ></textarea>
+                            <div class="tw-flex tw-items-center tw-gap-4">
+                                <!-- Sélecteur -->
+                                <select id="contentType" 
+                                        class="tw-px-4 tw-py-2 tw-rounded-lg tw-bg-white dark:tw-bg-[#17181b] tw-border dark:tw-border-gray-800 focus:tw-border-[#6366f1] focus:tw-ring-1 focus:tw-ring-[#6366f1] tw-outline-none tw-transition-colors">
+                                    <option value="entertainment">🎬 Entertainment</option>
+                                    <option value="vlog">📹 Vlog</option>
+                                    <option value="podcast">🎙️ Podcast</option>
+                                </select>
+
+                                <!-- Zone de texte -->
+                                <textarea
+                                    id="video_topic"
+                                    class="tw-w-full tw-h-[10px] tw-px-4 tw-py-3 tw-rounded-lg tw-bg-white dark:tw-bg-[#17181b] tw-border dark:tw-border-gray-800 focus:tw-border-[#6366f1] focus:tw-ring-1 focus:tw-ring-[#6366f1] tw-outline-none tw-transition-colors"
+                                    placeholder="Describe the topic of the video..."></textarea>
+                            </div>
                         </div>
 
                         <!-- Section Text with Checkbox -->
