--- a/thumbnails_generator.html
+++ b/thumbnails_generator.html
@@ -242,7 +242,7 @@
                                     class="tw-w-full tw-h-[10px] tw-px-4 tw-py-3 tw-rounded-lg tw-bg-white dark:tw-bg-[#17181b] tw-border dark:tw-border-gray-800 focus:tw-border-[#6366f1] focus:tw-ring-1 focus:tw-ring-[#6366f1] tw-outline-none tw-transition-colors"
                                     placeholder="Write the text you want to display on the thumbnail..."></textarea>
                                 <!-- Sélecteur de type à droite -->
-                                <select id="contentType" 
+                                <select id="category" 
                                         class="tw-w-48 tw-px-4 tw-py-2 tw-rounded-lg tw-bg-white dark:tw-bg-[#17181b] tw-border dark:tw-border-gray-800 focus:tw-border-[#6366f1] focus:tw-ring-1 focus:tw-ring-[#6366f1] tw-outline-none tw-transition-colors">
                                     <option value="entertainment">🎬 Entertainment</option>
                                     <option value="vlog">📹 Vlog</option>
