--- a/gallery.html
+++ b/gallery.html
@@ -47,8 +47,8 @@
 
                     <!-- Actions à droite -->
                     <div class="tw-flex tw-items-center tw-gap-6">
-                        <a href="dashboard.html" class="tw-text-l tw-text-white hover:tw-text-[#6366f1] tw-transition-colors">
-                            Dashboard
+                        <a href="thumbnails_generator.html" class="tw-text-l tw-text-white hover:tw-text-[#6366f1] tw-transition-colors">
+                            Home
                         </a>
                         <button class="tw-p-2 tw-rounded-full hover:tw-bg-gray-100 dark:hover:tw-bg-gray-800 tw-transition-colors">
                             <i class="bi bi-gear"></i>
